--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
  * @Author: wuhuidong && davewuhuidong_i@didilobal.com
  * @Date: 2024-08-19 15:27:22
  * @LastEditors: wuhuidong && davewuhuidong_i@didilobal.com
- * @LastEditTime: 2024-08-19 16:55:57
+ * @LastEditTime: 2024-09-02 17:21:31
  * @Description: 
 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>云遗科技</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
